--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="field">
         <%= f.label :category %><br>
-        <%= f.text_field :category %>
+        <%= f.select(:category, Category.all.collect {|c| [ c.name ] }, {include_blank: '-- Select One --'}, class: "my-selector") %>
       </div>
       <div class="field">
         <%= f.label :transaction_type %><br>
@@ -43,7 +43,7 @@
         </div>
       
       <div class="actions">
-        <%= f.submit %>
+        <%= f.submit "Create Transaction" %>
       </div>
     <% end %>
   </div>
