--- a/app/views/notes/account_transactions.html.erb
+++ b/app/views/notes/account_transactions.html.erb
@@ -3,13 +3,21 @@
       <table class="table">
         <% @notes.each do |transaction| %>
             <tr>
+              <% if transaction.transaction_date.present? %>
+                <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
+              <% else %>
               <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
+              <% end %>
               <td><%= transaction.explanation %></td>
               <td><%= link_to "#{number_to_currency(transaction.amount)}", transaction %></td>
             </tr>
-          </a>
+          
         <% end %>
+       
       </table>
+      
+      </a>
+      <%= will_paginate @notes %> <br>
     <%= link_to 'New Transaction', new_account_note_path(@account) %>
 
   <!--<table>-->
