--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -4,6 +4,7 @@
   <div class="page-content-col">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
+        <%= link_to 'Back to Accounts', accounts_path %>
         <table>
           <thead>
             <tr>
@@ -16,11 +17,15 @@
               <th colspan="1"></th>
             </tr>
           </thead>
-        
+          
           <tbody>
             <% @notes.each do |transaction| %>
               <tr>
+                <% if transaction.transaction_date.present? %>
+                <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
+                <% else %>
                 <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
+                <% end %>
                 <td><%= transaction.account.name %></td>
                 <td><%= transaction.explanation %></td>
                 <td><%= number_to_currency(transaction.amount) %></td>
@@ -55,8 +60,11 @@
               </tr>
             <% end %>
           </tbody>
-        </table><br>
-        <%= link_to 'Back to Accounts', accounts_path %>
+          
+        </table>
+        <%= will_paginate %>
+        <br>
+        
       </div>
     </div>
   </div>
