--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -21,14 +21,21 @@
         <% if @note.related_account.present? %>
           <p>
             <strong>Related Account:</strong>
-            <%= @transaction.related_account.name %>
+            <%= @note.related_account.name %>
           </p>
         <% end %>
         
+        <% if @note.transaction_date.present? %>
         <p>
           <strong>Transaction date:</strong>
           <%= @note.transaction_date.strftime("%m-%d-%Y") %>
         </p>
+        <% else %>
+        <p>
+          <strong>Transaction date:</strong>
+          <%= @note.created_at.strftime("%m-%d-%Y") %>
+        </p>
+        <% end %>
         
         <p>
           <strong>Category:</strong>
