--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,20 @@
 <div class="page-content">
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#" >Money Tracker   </a>
-      </div>
-      <%= image_tag 'sunset.jpg', class: "img-circle", size: "50x40" %>
-      <%= image_tag 'sky.jpg', class: "img-circle", size: "50x40" %>
-    </div>
-  </nav>
+  <!--<nav class="navbar navbar-default" role="navigation">-->
+  <!--  <div class="container-fluid">-->
+  <!--    <div class="navbar-header">-->
+  <!--      <a class="navbar-brand" href="#" >Money Tracker   </a>-->
+  <!--    </div>-->
+      <!--<%#= image_tag 'sunset.jpg', class: "img-circle", size: "50x40" %>-->
+      <!--<%#= image_tag 'sky.jpg', class: "img-circle", size: "50x40" %>-->
+  <!--  </div>-->
+  <!--</nav>-->
+  
+  
 
   <div class="page-content-col">
+    
     <div class="row">
+      <%= render partial: "navigation" %><br><br>
       <div class="col-md-6 col-md-offset-3">
         <a href="<%= cash_accounts_path %>" class="btn btn-success btn-lg btn-block" role="button">Cash on Hand<br>Balance: $<%= @cash_accounts.sum(:balance) %></a>
         <a href="<%= bank_accounts_path %>" class="btn btn-info btn-lg btn-block" role="button">Bank Account<br>Balance: $<%= @bank_accounts.sum(:balance) %></a>
